--- a/week10/week10.qmd
+++ b/week10/week10.qmd
@@ -582,3 +582,151 @@ $$ \begin{aligned}
 \right\}}^{\text{score for } \phi}  \\ 
 & = - \left\{ \frac{a_i(\phi)^2 a_i'\right\}
 \end{aligned} $$
+
+# Lab 
+
+Throughout this course, we've discussed "asymptotic" properties of estimators, including consistency 
+$(\hat \theta \stackrel{p}{\to} \theta)$. We've also discussed asymptotic tests — for example, F-tests
+which converge to a $\chi^2$ distribution in large samples. However, previous discussions have been 
+limited to models involving normally distributed rnadom variables. 
+
+Asymptotic likelihood theory provides a framework by which we can construct estimators with optimal properties for
+arbitrary distributions, as well as asymptotic tests based on those estimators. Consider
+an analysis of a random sample such that 
+
+$$Y_1, ..., Y_n \stackrel{iid}{\sim} f(y_i \mid \theta)$$ 
+
+and we are interested in drawing inference $\theta$ (which may be a vector of parameters). Let 
+$\mathbf{Y} = (Y_1, ..., Y_n)$. Then we can define several components of a likelihood model: 
+
+The likelihood: 
+
+$$\mathcal L(\theta \mid \mathbf{Y}) = f(y \mid \theta) = \prod_{i=1}^n f(y_i \mid \theta)$$ 
+
+Log-likelihood: 
+
+$$\ell(\theta \mid y) = \log \mathcal L(\theta \mid y) = \sum_{i=1}^n \log f(y_i \mid \theta)$$
+
+Score: 
+
+$$U(\theta \mid y) = \frac{\partial}{\partial \theta} \ell (\theta \mid y) = \left( \frac{\partial}{\partial \theta_1} \ell(\theta \mid y), ..., \frac{\partial}{\partial \theta_1} \ell(\theta \mid y) \right)$$
+
+## The Score
+
+Information Matrix 
+
+$$\mathcal I(\theta) = \E( U(\theta | y) \otimes U(\theta \mid y)^T) $$ 
+
+Since $\E[U(\theta \mid y)]^2 = 0$. 
+
+This is the variance of the score. Under regularity conditions, the $(i,j)$th entry is equal to 
+$$- \E( \frac{\partial^2}{\partial \theta_i \partial \theta_j} \ell ( \theta \mid y)).$$ 
+
+As we've seen previously, the MLE is the solution to $U(\theta \mid y) = 0$. 
+
+The nice property of this estimator is that, for distributions with reasonably well-behaved likelihood functions, 
+$\hat \theta_{MLE}$ is consistent and asymptotically normal (CAN). Therefore 
+
+$$\sqrt{n} (\hat \theta_{MLE} - \theta) \stackrel{\mathcal D}{\to} \mathcal N(0, \mathcal I(\theta)^{-1}).$$
+
+This identity is from where "asymptotic tests" come from — no matter the true distribution of $\mathbf Y$, $\hat \theta_{MLE}$ 
+will be asymptotically normal (or $\chi^2$ if we square the estimator). There are three different ways, denoted in the
+figure below, to construct asymptotic tests of $H_0 : \theta = \theta_0$ — each is obtained by using the above identity 
+in a different way. 
+
+![](images/asymptotic_tests.png)
+
+## Wald Test 
+
+Directly evaluates whether $\hat \theta_{MLE}$ is consistent with 
+$H_0 : \theta = \theta_0$. 
+
+$$W_n = (\hat \theta_{MLE} - \hat \theta_0)^T \mathcal I(\hat \theta_{MLE}) (\hat \theta_{MLE} - \theta_0) \approx \chi^2(p)$$
+
+Note that if $\theta$ is one dimensional this simplifies to 
+
+$$W_n = (\hat \theta_{MLE} - \theta_0) \mathcal I(\hat \theta_{MLE})^{1/2} \approx \mathcal N(0,1)$$ 
+
+* Advantages: Simple to compute, easy to construct confidence interval 
+* Disadvantages: requires MLE, approximation not as accurate in small samples
+
+## Score Test 
+
+Asks "how consistent is the observed data with the null hypothesis?" and answers this by considering the gradient of the log-likelihood at the value specified by $H_0$ (should be close to 0). 
+
+$$S_n = U(\theta_0 \mid y)^{T} \mathcal I(\theta_0)^{-1} U(\theta_0 \mid y) \approx \chi^2(p)$$
+
+Note thta if $\theta$ is 1-dimensional, we can simplify this expression to 
+
+$$S_n = U(\theta_0 \mid y) \mathcal I(\theta_0)^{-1/2} \approx \mathcal N(0, 1)$$
+
+* Advantages: Do not need to compute MLE, more computationally efficient.
+* Disadvatage: Hard to construct confidence intervals since inverting this equation is difficult. 
+
+Note to remember: For all of the above, if our null hypothesis is a function of multiple parameters, we can construct a $C$ matrix and test $C \theta$ just as we did for the linear model in the first half of the course. 
+
+## Likelihood Ratio Test
+
+Considers the relative likelihood of the "best fitting model" under no restrictions to the model under $H_0$. 
+
+$$Q_n = 2 \left( \ell(\hat\theta_{MLE} - \ell(\theta_0) \right) \approx \chi^2(p)$$
+
+* Advantages: No derivatives needed, most accurate approximation 
+* Disdvantage: Requires both MLE and knowledge of log-likelihood under $H_0$. 
+
+### Inference on a single proportion 
+
+Suppose we have data on the number of independent successes in a population of $n$ study units. This gives rise to the model 
+
+$$Y \sim \text{Binom}(n, \pi)$$ 
+
+Suppose our goal is to estimate $\pi$ and test the null hypothesis 
+$H_0 : \pi = \pi_0$. There are two ways to do this: we can either conduct an 
+asymptotic $\chi^2$ test using one of the three previously discussed options, or we can perform an "exact" test by comparing observed values against the Binomial distribution directly. 
+
+## Asymptotic Inference 
+
+For any test we use, we'll need the components of the likelihood. Recall that the pmf of the Binomial distribution is 
+
+$${n \choose y} \pi^y (1-\pi)^{n-y}$$ 
+
+Start by writing out the log-likelihood, score, and information for this model. Note that the information matrix will only be a single value since we only have one parameter $\pi$ and that we will only have one observation $Y$. 
+
+$$\begin{aligned}
+\ell(\pi \mid y) & = \log \left( {n \choose y} \pi^y (1-\pi)^{n-y} \right) \\
+& = \log({n \choose y}) + y \log \pi + (n - y) \log (1-\pi) \\
+& \propto y \log( \pi / (1-\pi)) + n \log (1-\pi).\end{aligned} $$
+
+$$U(\theta \mid y) = 
+y(\frac{1-\pi}{\pi}) \left( \frac{1-\pi - (-\pi)}{
+  \right)
+
+\frac{\partial}{\partial \pi} \ell(\pi \mid y) = \frac{y \pi^{y-1} (1-\pi)^{n-y} - (n-y)(1-\pi)^{n-y-1}}{ \pi^y (1-\pi)^{n-y}}$$
+
+$$\mathcal I(\pi) = -\E[\frac{\partial^2}{\partial \pi^2} \ell(\pi \mid y)]
+
+
+
+Find the MLE of $\pi$. 
+
+$$\begin{aligned}
+\frac{n \pi(1-2\pi)}{\pi^2(1-\pi)^2} + \frac{n \pi }{\pi (1-\pi)^2} & = 
+\frac{n - 2n \pi + n \pi}{\pi (1-\pi)^2} \\
+& = \frac{n}{\pi (1-\pi)}
+\end{aligned}
+$$
+
+$$U(\pi) = 0 \Rightarrow \frac{y}{n(1-\pi)} = \frac{n}{1-\pi} ...$$
+
+Derive the Wald statistic using the definition. 
+
+
+
+Now invert this test statistic to obtain a $1-\alpha$ percentile Wald-style confidence interval. 
+
+What potential issue might arise when using a Wald test statistic? 
+
+Derive the Score test statistic using the definition. 
+
+Prove that inverting this test statistic to obtain a $1-\alpha$ percentile Score-style confidence interval yields ... 
+
